--- a/Request Refill/App.config
+++ b/Request Refill/App.config
@@ -18,4 +18,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LIT-SERVER\SQLEXPRESS;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+    <connectionStrings>
+	    <add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-32009C9;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
+</configuration>
