Накинул пример диалогового окна для добавления распечатки в список

--- a/Request Refill/Request Refill.csproj
+++ b/Request Refill/Request Refill.csproj
@@ -111,7 +111,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Classes\PrintedDocument.cs" />
+    <Compile Include="Classes\PrintoutData.cs" />
     <Compile Include="Classes\ProgramData.cs" />
     <Compile Include="Classes\ThemeDetector.cs" />
     <Compile Include="Database\Cabinet.cs">
@@ -161,6 +161,9 @@
     </Compile>
     <Compile Include="Database\vCartridgeReport.cs">
       <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Dialog\AddPrintout.xaml.cs">
+      <DependentUpon>AddPrintout.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\WindowCreateRequestRefill.xaml.cs">
       <DependentUpon>WindowCreateRequestRefill.xaml</DependentUpon>
@@ -214,6 +217,10 @@
     <Resource Include="Resources\32\X.png" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Windows\Dialog\AddPrintout.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\WindowCreateRequestRefill.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
