--- a/Request Refill/Request Refill.csproj
+++ b/Request Refill/Request Refill.csproj
@@ -183,6 +183,9 @@
     <Compile Include="Database\vCabinetPrinters.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Windows\CreateRequestRefill.xaml.cs">
+      <DependentUpon>CreateRequestRefill.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Dialog\AddPrintout.xaml.cs">
       <DependentUpon>AddPrintout.xaml</DependentUpon>
     </Compile>
@@ -241,6 +244,10 @@
     <Resource Include="Resources\32\X.png" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Windows\CreateRequestRefill.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\Dialog\AddPrintout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
