--- a/Request Refill/App.config
+++ b/Request Refill/App.config
@@ -19,6 +19,6 @@
     </providers>
   </entityFramework>
     <connectionStrings>
-	    <add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HK-PC\HK;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	    <add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LIT-SERVER\SQLEXPRESS;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 </configuration>
