--- a/Request Refill/Request Refill.csproj
+++ b/Request Refill/Request Refill.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Database\ReasonForReplacement.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="SetupWizardSettingsPages\NavigationClass.cs" />
     <Compile Include="SetupWizardSettingsPages\SetupWizardSettings_Page1.xaml.cs">
       <DependentUpon>SetupWizardSettings_Page1.xaml</DependentUpon>
     </Compile>
