--- a/InkTrack Report/Properties/Settings.settings
+++ b/InkTrack Report/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Request_Refill.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="InkTrack_Report.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="SelectedCabinetID" Type="System.Int32" Scope="User">
@@ -11,7 +11,7 @@
     <Setting Name="SelectedPrinterID" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="FirstStartup" Type="System.Boolean" Scope="User">
+    <Setting Name="isFirstStartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
