--- a/Request Refill/App.config
+++ b/Request Refill/App.config
@@ -4,6 +4,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Request_Refill.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -21,4 +24,20 @@
     <connectionStrings>
 	    <add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LIT-SERVER\SQLEXPRESS;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
+    <userSettings>
+        <Request_Refill.Properties.Settings>
+            <setting name="SelectedCabinetID" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SelectedEmployeeID" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SelectedPrinterID" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="FirstStartup" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </Request_Refill.Properties.Settings>
+    </userSettings>
 </configuration>
