--- a/InkTrack Report/App.config
+++ b/InkTrack Report/App.config
@@ -53,7 +53,7 @@
         </Request_Refill.Properties.Settings>
     </userSettings>
     <connectionStrings>
-    <add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL-SERVER\LIT;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="LitDBEntities" connectionString="metadata=res://*/Database.Model.csdl|res://*/Database.Model.ssdl|res://*/Database.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HK-PC\SQLEXPRESS;initial catalog=LitDB;user id=CartridgeTracker;password=CartridgeTracker2025!;encrypt=False;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
